--- a/common.css
+++ b/common.css
@@ -27,11 +27,12 @@ a{color:#333;text-decoration:none}
 .scroll_list>.on a{border-color:var(--activeColor);background-color:var(--activeColor)}
 
 /*평점*/
+/*평점*/
 .review_area{padding:50px 0;text-align:center;}
 .reviw_area .tit{font-size:20px;}
-.star_item .star{display:inline-block;width:50px;height:50px;background:url(img/btn_star.png) no-repeat 0 0;background-size:50px 50px;}
+.star_item .star{display:inline-block;width:50px;height:50px;background:url(img/btn_star.png) no-repeat 0 0;background-size:50px 50px;cursor:pointer;}
 .star_item .star.on{background:url(img/btn_star_on.png) no-repeat 0 0;background-size:50px 50px;}
 
 .default, .star_text{display:inline-block;padding-top:10px;color:#666;}
-.star_inner .star_text{display:none;padding-left:25px;background:url(img/ico_face01.png) no-repeat 0 10px;background-size:20px 20px;}
+.star_inner .star_text{padding-left:25px;background:url(img/ico_face01.png) no-repeat 0 10px;background-size:20px 20px;}
 .star_inner .star_text.on{display:inline-block;}
