--- a/common.css
+++ b/common.css
@@ -27,7 +27,6 @@ a{color:#333;text-decoration:none}
 .scroll_list>.on a{border-color:var(--activeColor);background-color:var(--activeColor)}
 
 /*평점*/
-/*평점*/
 .review_area{padding:50px 0;text-align:center;}
 .reviw_area .tit{font-size:20px;}
 .star_item .star{display:inline-block;width:50px;height:50px;background:url(img/btn_star.png) no-repeat 0 0;background-size:50px 50px;cursor:pointer;}
@@ -36,3 +35,8 @@ a{color:#333;text-decoration:none}
 .default, .star_text{display:inline-block;padding-top:10px;color:#666;}
 .star_inner .star_text{padding-left:25px;background:url(img/ico_face01.png) no-repeat 0 10px;background-size:20px 20px;}
 .star_inner .star_text.on{display:inline-block;}
+
+/*전체동의*/
+.agree_box{padding:20px;border:1px solid var(--bagicColor);border-radius:12px;}
+.agree_box .check_all{height:50px;line-height:50px;border-bottom:1px solid var(--bagicColor);}
+.agree_box .check_list>li{padding:20px 0;}
